remove 1.5-ism
git-svn-id: https://jumble.svn.sourceforge.net/svnroot/jumble/trunk@64 3c96dea9-a453-4bd5-b869-110af7cb2dd7